[package]
name = "bc-components"
version = "0.23.0"
edition = "2024"
description = "Secure Components for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-components-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-components"
keywords = ["cryptography"]                                            # Up to five
categories = ["cryptography"]                                          # https://crates.io/category_slugs

[dependencies]
bc-crypto = "^0.9.0"
bc-rand = "^0.4.0"
dcbor = { version = "^0.22.0", features = ["anyhow", "multithreaded"] }
bc-tags = "^0.5.0"
bc-ur = "^0.12.0"
sskr = "^0.8.0"

hex = "^0.4.3"
miniz_oxide = "^0.7.1"
anyhow = "^1.0.0"
url = "^2.4.1"
ssh-key = { version = "=0.6.7", default-features = false, features = [
    "dsa",
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
] }
zeroize = { version = "1.8.1", default-features = false, features = [
    "alloc",
    "zeroize_derive",
] }
rand_core = "0.6.4"
pqcrypto-mlkem = "^0.1.0"
pqcrypto-mldsa = "^0.1.1"
pqcrypto-traits = "^0.3.5"
ssh-agent-client-rs = "1.0.0"

[dev-dependencies]
hex-literal = "^0.4.1"
indoc = "^2.0.0"
version-sync = "^0.9.0"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "bc-components = .*", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "bc-components = .*", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "#!\\[doc\\(html_root_url = \"https://docs.rs/bc-components/[0-9.]*\"\\)\\]", replace = "#![doc(html_root_url = \"https://docs.rs/bc-components/{{version}}\")]" },
]

[features]
ssh_agent_tests = []
