[package]
name = "bc-components"
version = "0.26.0"
edition = "2024"
description = "Secure Components for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-components-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-components"
keywords = ["cryptography"]                                            # Up to five
categories = ["cryptography"]                                          # https://crates.io/category_slugs

[dependencies]
bc-crypto = { version = "^0.11.0", default-features = false }
bc-rand = "^0.4.1"
dcbor = { version = "^0.23.1", features = ["multithreaded"] }
bc-tags = "^0.7.0"
bc-ur = "^0.14.0"
sskr = "^0.9.1"

hex = "^0.4.3"
miniz_oxide = "^0.7.1"
thiserror = "^2.0"
url = "^2.4.1"
ssh-key = { version = "=0.6.7", default-features = false, features = [
    "dsa",
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
], optional = true }
zeroize = { version = "1.8.1", default-features = false, features = [
    "alloc",
    "zeroize_derive",
] }
rand_core = "0.6.4"
pqcrypto-mlkem = { version = "^0.1.0", optional = true }
pqcrypto-mldsa = { version = "^0.1.1", optional = true }
pqcrypto-traits = { version = "^0.3.5", optional = true }
ssh-agent-client-rs = { version = "1.1.0", optional = true }

[dev-dependencies]
hex-literal = "^0.4.1"
indoc = "^2.0.0"
version-sync = "^0.9.0"

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "bc-components = .*", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "bc-components = .*", replace = "{{crate_name}} = \"{{version}}\"" },
    { file = "src/lib.rs", search = "#!\\[doc\\(html_root_url = \"https://docs.rs/bc-components/[0-9.]*\"\\)\\]", replace = "#![doc(html_root_url = \"https://docs.rs/bc-components/{{version}}\")]" },
]

[features]
default = ["secp256k1", "pqcrypto", "ssh"]
secp256k1 = ["bc-crypto/secp256k1"]
pqcrypto = ["dep:pqcrypto-mlkem", "dep:pqcrypto-mldsa", "dep:pqcrypto-traits"]
ssh = ["dep:ssh-key"]
ssh-agent = ["ssh", "dep:ssh-agent-client-rs"]
ssh_agent_tests = ["ssh-agent"]
