[package]
name = "bc-components"
version = "0.31.0"
edition = "2024"
description = "Secure Components for Rust."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-components-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-components"
keywords = ["cryptography"]                                            # Up to five
categories = ["cryptography"]                                          # https://crates.io/category_slugs

[dependencies]
bc-crypto = { version = "^0.14.0", default-features = false, features = [] }
bc-rand = "^0.5.0"
dcbor = { version = "^0.25.0", features = ["multithreaded"] }
bc-tags = "^0.12.0"
bc-ur = "^0.19.0"
sskr = "^0.12.0"

hex = "^0.4.3"
miniz_oxide = "^0.8.9"
thiserror = "^2.0"
url = "^2.4.1"
ssh-key = { version = "=0.6.7", default-features = false, features = [
    "dsa",
    "ecdsa",
    "rand_core",
    "std",
    "crypto",
], optional = true }
zeroize = { version = "1.8.1", default-features = false, features = [
    "alloc",
    "zeroize_derive",
] }
rand_core = "^0.9.3"
schnorrkel = { version = "0.11.5", optional = true }
blake2 = { version = "0.10", optional = true }
pqcrypto-mlkem = { version = "^0.1.0", optional = true }
pqcrypto-mldsa = { version = "^0.1.1", optional = true }
pqcrypto-traits = { version = "^0.3.5", optional = true }
ssh-agent-client-rs = { version = "1.1.0", optional = true }

[dev-dependencies]
hex-literal = "^1.1.0"
indoc = "^2.0.0"
version-sync = "^0.9.0"

[features]
default = ["secp256k1", "ed25519", "sr25519", "pqcrypto", "ssh"]
secp256k1 = ["bc-crypto/secp256k1"]
ed25519 = ["bc-crypto/ed25519"]
sr25519 = ["dep:schnorrkel", "dep:blake2"]
pqcrypto = ["dep:pqcrypto-mlkem", "dep:pqcrypto-mldsa", "dep:pqcrypto-traits"]
ssh = ["dep:ssh-key"]
ssh-agent = ["dep:ssh-agent-client-rs"]
ssh-agent-tests = ["ssh-agent"]
